# connect-migration-utility

./: .gitignore  CONTRIBUTING.md  LICENSE  MODEL_SETUP.md  README.md  download_model.py  fm_transforms_list.json  new_file.json  pyproject.toml  pytest.ini  requirements.txt  service.yml
output/: all_fm_configs.json  connectors.json
sm/: activemqsinkconnector.json  awscloudwatchmetricssinkconnector.json  awscloudwatchsourceconnector.json  awslambdasinkconnector.json  azureblobstoragesourceconnector.json  azuredatalakegen1storagesinkconnector.json  azurefunctionssinkconnector.json  azuresqldwsinkconnector.json  cassandrasinkconnector.json  datadiodesinkconnector.json  datadiodesourceconnector.json  eventhubssourceconnector.json  ftpssourceconnector.json  gcssinkconnector.json  githubsourceconnector.json  hbasesinkconnector.json  hdfs3sinkconnector.json  hdfs3sourceconnector.json  ibmmqsinkconnector.json  influxdbsinkconnector.json  influxdbsourceconnector.json  jdbcsinkconnector.json  jirasourceconnector.json  jmssinkconnector.json  jmssourceconnector.json  kinesissourceconnector.json  kudusinkconnector.json  kudusourceconnector.json  pagerdutysinkconnector.json  prometheusmetricssinkconnector.json  rabbitmqsinkconnector.json  rabbitmqsourceconnector.json  redshiftsinkconnector.json  s3sinkconnector.json  servicebussourceconnector.json  servicenowsinkconnector.json  servicenowsourceconnector.json  snmptrapsourceconnector.json  solacesinkconnector.json  solacesourceconnector.json  (+10 more)
src/: bigquery_v1_to_v2_transformer.py  config_discovery.py  config_translator.py  main.py  (+14 more)
(+353 files in other folders)
